Update: Menambahkan section fitur baru dan perbaikan kontak

--- a/index.html
+++ b/index.html
@@ -134,15 +134,22 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <img src="https://via.placeholder.com/200x200/ffffff/000000?text=Logo+SI+Untan" alt="Logo Sistem Informasi Untan" />
-            <div class="text-center">
-                <h1>Selamat Datang di Sistem Informasi</h1>
-                <p class="lead">Universitas Tanjungpura - Mengembangkan Teknologi Informasi untuk Masa Depan</p>
-            </div>
-        </div>
-    </section>
+<section class="hero position-relative text-white d-flex align-items-center justify-content-center" style="height: 60vh; background-image: url('6e1fea8a085f9966636140cf463e5212.jpeg'); background-size: cover; background-position: center;">
+  <!-- Overlay gelap agar teks terlihat -->
+  <div style="position: absolute; top:0; left:0; right:0; bottom:0; background-color: rgba(0,0,0,0.4);"></div>
+
+  <div class="container position-relative d-flex align-items-center justify-content-center" style="gap: 30px;">
+    <!-- Logo di kiri -->
+    <div class="d-none d-md-block" style="max-width:150px;">
+      <img src="cropped-logo-UNTAN-removebg-preview-2.png" alt="Logo Sistem Informasi Untan" class="img-fluid" style="filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.7));" />
+    </div>
+    <!-- Teks utama di tengah -->
+    <div class="text-center">
+      <h1 style="font-size: 3.2rem; font-weight: 600; text-shadow: 2px 2px 6px rgba(0,0,0,0.7);">Selamat Datang di Sistem Informasi</h1>
+      <p class="lead" style="font-size: 1.3rem; text-shadow: 1px 1px 4px rgba(0,0,0,0.6);">Universitas Tanjungpura - Mengembangkan Teknologi Informasi untuk Masa Depan</p>
+    </div>
+  </div>
+</section>
 
     <div class="container my-5">
         <!-- Tentang -->
@@ -248,7 +255,7 @@
                     <div class="card">
                         <img src="Jbr__2366rf-removebg-preview-e1698992723807.png" class="card-img-top" alt="Foto Tim Lab" />
                         <div class="card-body">
-                            <h5 class="card-title">Tenaga Pendidik: Tim Lab dan Asisten</h5>
+                            <h5 class="card-title">Agus Setiawan, S.Si</h5>
                             <p class="card-text">Admin Jurusan Sistem Informasi</p>
                             <small class="text-muted">Hubungi jurusan untuk detail lebih lanjut.</small>
                         </div>
