Update:Menambahkan section fitur baru dan perbaikan kontak

--- a/index.html
+++ b/index.html
@@ -114,24 +114,27 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Sistem Informasi Untan</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#tentang">Tentang</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#mata-kuliah">Mata Kuliah</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#dosen">Dosen</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#galeri">Galeri</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#berita">Berita</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="images.png" alt="Logo Sistem Informasi Untan" style="height: 40px; margin-right: 10px;" />
+            Sistem Informasi Untan
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#tentang">Tentang</a></li>
+                <li class="nav-item"><a class="nav-link" href="#mata-kuliah">Mata Kuliah</a></li>
+                <li class="nav-item"><a class="nav-link" href="#dosen">Dosen</a></li>
+                <li class="nav-item"><a class="nav-link" href="#galeri">Galeri</a></li>
+                <li class="nav-item"><a class="nav-link" href="#berita">Berita</a></li>
+                <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section -->
 <section class="hero position-relative text-white d-flex align-items-center" style="height: 60vh; background-image: url('6e1fea8a085f9966636140cf463e5212.jpeg'); background-size: cover; background-position: center;">
@@ -164,7 +167,7 @@
                     <p>Jurusan Sistem Informasi Universitas Tanjungpura (Untan) fokus pada pendidikan dan penelitian di bidang pengembangan sistem informasi, analisis data, keamanan siber, dan teknologi digital. Kami berkomitmen untuk menghasilkan lulusan yang inovatif dan siap berkontribusi dalam era digital.</p>
                 </div>
                 <div class="col-md-6">
-                    <p>Fakultas: Fakultas Teknik. Bergabunglah dengan komunitas ahli sistem informasi yang siap menghadapi tantangan teknologi modern!</p>
+                    <p>Fakultas: Fakultas Matematika dan Ilmu Pengetahuan Alam. Bergabunglah dengan komunitas ahli sistem informasi yang siap menghadapi tantangan teknologi modern!</p>
                 </div>
             </div>
         </section>
