--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="images.png" alt="Logo Sistem Informasi Untan" style="height: 40px; margin-right: 10px;" />
+            <img src="images-removebg-preview.png" alt="Logo Sistem Informasi Untan" style="height: 40px; margin-right: 10px;" />
             Sistem Informasi Untan
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
