Update:Menambahkan section fitur baru dan perbaikan kontak

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #084B8A 0%, #093B6B 100%);
-            color: #222;
+            color: #ffffff;
             overflow-x: hidden;
         }
         .hero {
