--- a/index.html
+++ b/index.html
@@ -320,29 +320,57 @@
             </div>
         </section>
 
-        <!-- Kontak -->
-        <section id="kontak" class="fade-in mt-5">
-            <h2 class="text-center mb-4">Kontak Kami</h2>
-            <form action="mailto:info@sisfo.untan.ac.id" method="post" enctype="text/plain">
-                <div class="mb-3">
-                    <label for="nama" class="form-label">Nama</label>
-                    <input type="text" class="form-control" id="nama" name="nama" placeholder="Masukkan nama Anda" required />
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Masukkan email Anda" required />
-                </div>
-                <div class="mb-3">
-                    <label for="pesan" class="form-label">Pesan</label>
-                    <textarea class="form-control" id="pesan" name="pesan" rows="3" placeholder="Tulis pesan Anda" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Kirim</button>
-            </form>
-            <p class="mt-3">
-                Email: info@sisfo.untan.ac.id | Telepon: (0561) 123-4567 | Alamat: Jl. Prof. Dr. H. Hadari Nawawi, Pontianak 78124
-            </p>
-        </section>
+        <!-- Kontak Section -->
+<section id="kontak" style="background-color: #084B8A; color: white; padding: 60px 0; position: relative; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+  <div class="container d-flex flex-wrap justify-content-between" style="gap: 40px;">
+    
+    <!-- Informasi Kontak & Logo -->
+    <div class="kontak-info" style="flex: 1 1 300px; min-width: 280px;">
+      <img src="cropped-logo-UNTAN-removebg-preview-2.png" alt="Logo UNTAN" style="width: 100px; margin-bottom: 20px;" />
+      <h5>Prodi Sistem Informasi <br> FMIPA UNTAN</h5>
+      <p style="margin: 10px 0;">
+        <i class="bi bi-geo-alt-fill"></i> Jl. Prof. Dr. H. Nawawi - Kode Pos: 78124
+      </p>
+      <p style="margin: 10px 0;">
+        <i class="bi bi-telephone-fill"></i> (0561) 577963
+      </p>
+      <p style="margin: 10px 0;">
+        <i class="bi bi-envelope-fill"></i> Sisfo@untan.ac.id
+      </p>
+      <div style="margin-top: 15px;">
+        <a href="https://www.facebook.com/untanofficial" target="_blank" style="color: white; margin-right: 10px; font-size: 1.5rem;"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/untanofficial" target="_blank" style="color: white; margin-right: 10px; font-size: 1.5rem;"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.youtube.com/untan" target="_blank" style="color: white; font-size: 1.5rem;"><i class="bi bi-youtube"></i></a>
+      </div>
     </div>
+    
+    <!-- Link Terkait -->
+    <div class="link-terkait" style="flex: 1 1 200px; min-width: 180px;">
+      <h5>Link Terkait</h5>
+      <ul style="list-style: none; padding-left: 0; line-height: 2; font-size: 0.9rem;">
+        <li><a href="https://siakad.untan.ac.id" target="_blank" style="color: #ccc; text-decoration: none;">Siakad UNTAN</a></li>
+        <li><a href="https://elearning.untan.ac.id" target="_blank" style="color: #ccc; text-decoration: none;">E-Learning UNTAN</a></li>
+        <li><a href="https://untan.ac.id" target="_blank" style="color: #ccc; text-decoration: none;">Website UNTAN</a></li>
+        <li><a href="https://fmipa.untan.ac.id" target="_blank" style="color: #ccc; text-decoration: none;">Website FMIPA UNTAN</a></li>
+        <li><a href="https://uptbahasa.untan.ac.id" target="_blank" style="color: #ccc; text-decoration: none;">UPT Bahasa UNTAN</a></li>
+        <li><a href="https://upttik.untan.ac.id" target="_blank" style="color: #ccc; text-decoration: none;">UPT TIK UNTAN</a></li>
+        <li><a href="https://scbm.untan.ac.id" target="_blank" style="color: #ccc; text-decoration: none;">SCBM</a></li>
+        <li><a href="#jurnal-ilmiah" style="color: #ccc; text-decoration: none;">Jurnal Ilmiah</a></li>
+      </ul>
+    </div>
+
+    <!-- Peta Lokasi -->
+    <div class="peta-lokasi" style="flex: 1 1 400px; min-width: 300px;">
+      <h5>Peta Lokasi Gedung Baru FMIPA UNTAN</h5>
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.059703oooo3!2d109.3947250152207!3d-0.03511269969715144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e1fc85fa0b65fff%3A0xbb1d477eb839e616!2sGedung%20Baru%20FMIPA%20Universitas%20Tanjungpura!5e0!3m2!1sen!2sid!4v1697826689000!5m2!1sen!2sid" 
+        width="100%" height="260" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+</section>
+
+<!-- Jangan lupa pasang ikon Bootstrap Icons di head atau sebelum penutup body: -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <!-- Footer -->
     <footer>
