--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </section>
 
         <!-- Berita -->
-        <section id="berita" class="fade-in mt-5">
+        <section id="berita" class="fade-in mt-5 mb-5">
             <h2 class="text-center mb-4">Berita Terbaru</h2>
             <div class="row">
                 <div class="col-md-6">
