Update:Menambahkan section fitur baru dan perbaikan kontak

--- a/index.html
+++ b/index.html
@@ -260,6 +260,26 @@
                 </div>
                 <div class="col-md-4 mb-3">
                     <div class="card">
+                        <img src="pak-dian-new-1-e1714281947163.jpeg" class="card-img-top" alt="Foto Tim Lab" />
+                        <div class="card-body">
+                            <h5 class="card-title">Dian Prawira, S.T., M.Eng</h5>
+                            <p class="card-text">Ketua Kelompok Keahlian Pengembangan Perangkat Lunak</p>
+                            <small class="text-muted">Email: dianprawira@untan.ac.id</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card">
+                        <img src="WhatsApp-Image-2024-04-28-at-11.49.07.jpeg" class="card-img-top" alt="Foto Tim Lab" />
+                        <div class="card-body">
+                            <h5 class="card-title">Syahru Rahmayuda, S.Kom., M.Kom</h5>
+                            <p class="card-text">Anggota Kelompok Keahlian Intelihensi Bisnis</p>
+                            <small class="text-muted">Email: syharurahmayuda@untan.ac.id</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card">
                         <img src="Jbr__2366rf-removebg-preview-e1698992723807.png" class="card-img-top" alt="Foto Tim Lab" />
                         <div class="card-body">
                             <h5 class="card-title">Agus Setiawan, S.Si</h5>
